--- a/MtdNumerico.csproj
+++ b/MtdNumerico.csproj
@@ -46,11 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DerivadaNumerica.cs" />
-    <Compile Include="DerivadaNumericaForm.cs">
+    <Compile Include="Bisseccao\MetodoBisseccao.cs" />
+    <Compile Include="Bisseccao\MetodoBisseccaoForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DerivadaNumericaForm.Designer.cs">
+    <Compile Include="Bisseccao\MetodoBisseccaoForm.Designer.cs">
+      <DependentUpon>MetodoBisseccaoForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DerivadaNumeriva\DerivadaNumerica.cs" />
+    <Compile Include="DerivadaNumeriva\DerivadaNumericaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DerivadaNumeriva\DerivadaNumericaForm.Designer.cs">
       <DependentUpon>DerivadaNumericaForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
@@ -61,7 +68,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="DerivadaNumericaForm.resx">
+    <EmbeddedResource Include="Bisseccao\MetodoBisseccaoForm.resx">
+      <DependentUpon>MetodoBisseccaoForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DerivadaNumeriva\DerivadaNumericaForm.resx">
       <DependentUpon>DerivadaNumericaForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
