--- a/MtdNumerico.csproj
+++ b/MtdNumerico.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>MtdNumerico</RootNamespace>
     <AssemblyName>MtdNumerico</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -67,6 +67,13 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="PosicaoFalsa\MetodoPosicaoFalsa.cs" />
+    <Compile Include="PosicaoFalsa\MetodoPosicaoFalsaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PosicaoFalsa\MetodoPosicaoFalsaForm.Designer.cs">
+      <DependentUpon>MetodoPosicaoFalsaForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Bisseccao\MetodoBisseccaoForm.resx">
@@ -77,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PosicaoFalsa\MetodoPosicaoFalsaForm.resx">
+      <DependentUpon>MetodoPosicaoFalsaForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
